--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -2,11 +2,7 @@
 Removes white gap between slides - chagnge to base color of slide images
 */
 .carousel {
-  background:#000000;
-}
-
-.carousel-caption{
- color: #000000;;  
+  background:#FFFFFF;
 }
 
 /*
@@ -24,20 +20,22 @@ anchors are inline so you need ot make them block to go full width
   width:100%;
 }
 
-.carousel-indicators li {
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.25);
-}
-
-.carousel-indicators .active {
-  background-color: rgb(0, 0, 0);
+.carousel-caption {
+  top: 10% !important;
+  bottom: 0% !important;
 }
 
 
-.carousel-control-prev-icon {
-  background-image : url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+.carousel-caption h2 {
+  font-family: 'Vollkorn', serif;
+  font-size: 4em;
+  line-height: .5;
 }
 
-.carousel-control-next-icon {
-  background-image : url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+.carousel-caption p {
+  font-family: 'Vollkorn', serif;
+  font-size: 2em;
 }
+
+
+
